used internal queue for forwardin to alarm rule service